# mochi

./: .gitignore  .release-notes.txt  LICENSE  README.md  build_out.txt  index.html  package-lock.json  package.json  vite.config.ts
docs/: USER-GUIDE.md
docs/internal/: IMPLEMENTATION_SPEC.md  v0.1.0-优化记录.md  v0.1.1-优化计划.md  v0.1.1-优化记录.md  v0.3.0更新记录.md  交接文件.md  外挂字幕方案.md  统计页方案.md  设计草案.md  音轨切换修复待办.md
docs/internal/archive/: CC代码审计-2026-06-22.md  CHANGELOG.md  v0.2.0 更新记录.md  (+11 more)
scripts/: package-portable.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  mochi_file.rs  nfo.rs  paths.rs  scanner.rs  system_proxy.rs
src-tauri/src/metadata/: anilist.rs  bangumi.rs  cache.rs  cast.rs  episodes.rs  mod.rs  tmdb.rs
src/animations/: tokens.ts
src/components/: BreathingDot.tsx  CastStrip.tsx  DropOverlay.tsx  EpisodeModal.tsx  MetadataVerdict.tsx  Onboarding.tsx  OscBar.tsx  PageWrapper.tsx  PosterWall.tsx  SearchOverlay.tsx  SeriesDetail.tsx  Settings.tsx  SettingsAbout.tsx  SettingsData.tsx  SettingsGeneral.tsx  SettingsMedia.tsx  SettingsMetadata.tsx  SettingsPlayback.tsx  SettingsShortcuts.tsx  SynopsisPopover.tsx  TitleBar.tsx  VideoPlayer.tsx  WindowResizeHandles.tsx  icons.tsx
src/hooks/: useBackground.tsx  useFullscreen.ts  useImageSrc.ts  useMpv.ts  useNavigationDirection.tsx  useWindowWidth.ts
src/styles/: settings.ts
src/themes/: oscThemes.ts
src/types/: index.ts
src/utils/: color.ts  oscDragState.ts
